--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,16 +1,20 @@
 [versions]
-agp = "8.9.1"
-kotlin = "2.1.20"
-compose = "1.7.8"
+agp = "8.10.0"
+kotlin = "2.1.21"
+compose = "1.8.2"
 compose-material3 = "1.3.2"
 kotlininject = "0.7.2"
-ksp = "2.1.20-1.0.31"
+ksp = "2.1.21-2.0.1"
 androidx-activityCompose = "1.10.1"
-kotlinStdlib = "2.1.20"
+kotlinStdlib = "2.1.21"
 runner = "1.6.2"
 core = "1.6.1"
 junit = "1.2.1"
 coroutines = "1.10.1"
+androidx-navigation-compose = "2.9.0"
+compose-ui-text-google-fonts = "1.8.1"
+
+facebook = "18.0.3"
 
 [libraries]
 forcetower-toolkit-logdog = { module = "dev.forcetower.kmm.toolkit:logdog", version.prefer = "0.0.1" }
@@ -28,6 +32,10 @@ androidx-runner = { group = "androidx.test", name = "runner", version.ref = "run
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit" }
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
+androidx-compose-ui-text-googleFonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "compose-ui-text-google-fonts" }
+
+facebook-sdk = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -36,6 +44,7 @@ ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlinParcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
 kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
