--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,9 +12,14 @@ core = "1.6.1"
 junit = "1.2.1"
 coroutines = "1.10.1"
 androidx-navigation-compose = "2.9.0"
-compose-ui-text-google-fonts = "1.8.1"
+compose-ui-text-google-fonts = "1.8.2"
 
 facebook = "18.0.3"
+coreKtx = "1.16.0"
+junitVersion = "4.13.2"
+espressoCore = "3.6.1"
+appcompat = "1.7.0"
+material = "1.12.0"
 
 [libraries]
 forcetower-toolkit-logdog = { module = "dev.forcetower.kmm.toolkit:logdog", version.prefer = "0.0.1" }
@@ -36,6 +41,11 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-compose-ui-text-googleFonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "compose-ui-text-google-fonts" }
 
 facebook-sdk = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
+androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+junit = { group = "junit", name = "junit", version.ref = "junitVersion" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
