--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
 
         <activity android:name=".ui.navigation.account.facebook.FacebookLoginActivity" />
+        <activity android:name=".ui.navigation.home.HomeActivity" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
