--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.10.0"
 coilCompose = "3.2.0"
+composeCharts = "0.1.7"
 kotlin = "2.1.21"
 compose = "1.8.2"
 compose-material3 = "1.3.2"
@@ -11,7 +12,7 @@ kotlinStdlib = "2.1.21"
 runner = "1.6.2"
 core = "1.6.1"
 junit = "1.2.1"
-coroutines = "1.10.1"
+coroutines = "1.10.2"
 androidx-navigation-compose = "2.9.0"
 compose-ui-text-google-fonts = "1.8.2"
 
@@ -25,6 +26,7 @@ material = "1.12.0"
 [libraries]
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilCompose" }
+charts-compose = { module = "io.github.ehsannarmani:compose-charts", version.ref = "composeCharts" }
 forcetower-toolkit-logdog = { module = "dev.forcetower.kmm.toolkit:logdog", version.prefer = "0.0.1" }
 kotlininject-runtime = { module = "me.tatarka.inject:kotlin-inject-runtime-kmp", version.ref = "kotlininject" }
 kotlininject-compiler-ksp = { module = "me.tatarka.inject:kotlin-inject-compiler-ksp", version.ref = "kotlininject" }
