--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.10.0"
+agp = "8.10.1"
 coilCompose = "3.2.0"
 composeCharts = "0.1.7"
 kotlin = "2.1.21"
@@ -16,6 +16,7 @@ junit = "1.2.1"
 coroutines = "1.10.2"
 androidx-navigation-compose = "2.9.0"
 compose-ui-text-google-fonts = "1.8.2"
+ktor = "2.3.12"
 
 facebook = "18.0.3"
 coreKtx = "1.16.0"
@@ -25,6 +26,13 @@ appcompat = "1.7.0"
 material = "1.12.0"
 room = "2.7.1"
 sqlite = "2.5.1"
+kermit = "1.2.3"
+ktorfit = "2.5.2"
+kotlinSerialization = "1.8.1"
+
+spotless = "6.25.0"
+compose-multiplatform = "1.7.0"
+licensee = "1.12.0"
 
 [libraries]
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
@@ -48,6 +56,10 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
 androidx-compose-ui-text-googleFonts = { module = "androidx.compose.ui:ui-text-google-fonts", version.ref = "compose-ui-text-google-fonts" }
+ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-contentnegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinSerialization" }
 
 facebook-sdk = { group = "com.facebook.android", name = "facebook-android-sdk", version.ref = "facebook" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -58,6 +70,17 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-sqlite-bundled = { group = "androidx.sqlite", name = "sqlite-bundled", version.ref = "sqlite" }
+kermit-kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
+ktorfit = { module = "de.jensklingenberg.ktorfit:ktorfit-lib", version.ref = "ktorfit" }
+
+# Build logic dependencies
+android-gradlePlugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+spotless-gradlePlugin = { module = "com.diffplug.spotless:spotless-plugin-gradle", version.ref = "spotless" }
+compose-gradlePlugin = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-multiplatform" }
+composeCompiler-gradlePlugin = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin" }
+licensee-gradlePlugin = { module = "app.cash.licensee:licensee-gradle-plugin", version.ref = "licensee" }
+ktlint = "com.pinterest.ktlint:ktlint-cli:1.5.0"
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -71,3 +94,6 @@ kotlinCocoapods = { id = "org.jetbrains.kotlin.native.cocoapods", version.ref = 
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+cacheFixPlugin = { id = "org.gradle.android.cache-fix", version = "3.0.1" }
+ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
