--- a/android-app/src/main/AndroidManifest.xml
+++ b/android-app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     </queries>
 
     <application
+        android:label="@string/app_name"
         android:name=".InstalyticsApplication"
         android:allowBackup="false"
         android:supportsRtl="true"
