--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ koin-bom = "4.1.0"
 paging = "3.3.6"
 okio = "3.14.0"
 kache = "2.1.1"
+viewmodel = "2.9.1"
 
 facebook = "18.0.3"
 coreKtx = "1.16.0"
@@ -32,7 +33,8 @@ room = "2.7.2"
 sqlite = "2.5.2"
 kermit = "2.0.6"
 ktorfit = "2.5.2"
-kotlinSerialization = "1.9.0"
+kotlinSerialization = "1.8.1"
+skie = "0.10.4"
 
 spotless = "7.0.4"
 compose-multiplatform = "1.8.2"
@@ -55,6 +57,8 @@ compose-material-icons-extended = { module = "androidx.compose.material:material
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
 androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
+androidx-viewmodel-core = { module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "viewmodel" }
+androidx-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "viewmodel" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit" }
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
@@ -111,3 +115,4 @@ androidx-room = { id = "androidx.room", version.ref = "room" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 cacheFixPlugin = { id = "org.gradle.android.cache-fix", version = "3.0.1" }
 ktorfit = { id = "de.jensklingenberg.ktorfit", version.ref = "ktorfit" }
+touchlab-skie = { id = "co.touchlab.skie", version.ref = "skie" }
