Facebook full integration

--- a/ios-app/Instalytics/Instalytics/Info.plist
+++ b/ios-app/Instalytics/Instalytics/Info.plist
@@ -2,25 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>fb1081841330632270</string>
-            </array>
-        </dict>
-    </array>
-    <key>FacebookAppID</key>
-    <string>1081841330632270</string>
-    <key>FacebookClientToken</key>
-    <string>76662a3fa9b37eebe73db92ece242d99</string>
-    <key>FacebookDisplayName</key>
-    <string>Instalytics</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>fbapi</string>
-        <string>fb-messenger-share-api</string>
-    </array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb1081841330632270</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>1081841330632270</string>
+	<key>FacebookClientToken</key>
+	<string>76662a3fa9b37eebe73db92ece242d99</string>
+	<key>FacebookDisplayName</key>
+	<string>Instalytics</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
