--- a/ios-app/Instalytics/Instalytics/Info.plist
+++ b/ios-app/Instalytics/Instalytics/Info.plist
@@ -26,5 +26,11 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+    <key>FacebookAdvertiserIDCollectionEnabled</key>
+    <false/>
+	<key>FacebookAutoLogAppEventsEnabled</key>
+	<false/>
+    <key>ITSAppUsesNonExemptEncryption</key>
+    <false/>
 </dict>
 </plist>
